refactor(core): simplify type checks, imports, and list operations across core classes